[gd_scene load_steps=28 format=3 uid="uid://dbu66qjpxqpl0"]

[ext_resource type="Texture2D" uid="uid://boeq7ifk17b5p" path="res://Sprites/Coulis_img/img1-removebg-preview(1).png" id="1_h6kqc"]
[ext_resource type="Script" path="res://Scripts/tomaths_main_page.gd" id="1_qennl"]
[ext_resource type="Texture2D" uid="uid://b3msbxiw0au5n" path="res://Sprites/Coulis_img/img2-removebg-preview.png" id="2_p68oe"]
[ext_resource type="Texture2D" uid="uid://cawvndjv20rim" path="res://Sprites/Coulis_img/img3-removebg-preview(1).png" id="3_dlqqs"]
[ext_resource type="Texture2D" uid="uid://c0h50ytl75ydn" path="res://Sprites/Coulis_img/img4-removebg-preview(1).png" id="4_u0tbi"]
[ext_resource type="Texture2D" uid="uid://dttpumelmb6lu" path="res://Sprites/Coulis_img/img5-removebg-preview.png" id="5_3rhg6"]
[ext_resource type="Texture2D" uid="uid://bcrmnf8ydye7l" path="res://Sprites/Coulis_img/img6-removebg-preview.png" id="6_54g56"]
[ext_resource type="Texture2D" uid="uid://cnw4xudtj1pyw" path="res://Sprites/Coulis_img/img7-removebg-preview.png" id="7_jehfr"]
[ext_resource type="Texture2D" uid="uid://yskuuijy644r" path="res://Sprites/Coulis_img/img8-removebg-preview.png" id="8_lkje1"]
[ext_resource type="Texture2D" uid="uid://nfdojxcavh2p" path="res://Sprites/Coulis_img/img9.png" id="9_dki35"]
[ext_resource type="Texture2D" uid="uid://c0x2dfxbp7o6w" path="res://Sprites/exit_button.png" id="11_cjvmp"]
[ext_resource type="Texture2D" uid="uid://bjo2dq5uw7ekm" path="res://Sprites/start_button.png" id="12_lijjt"]
[ext_resource type="Texture2D" uid="uid://b7obeuvr5imfo" path="res://Sprites/tomaths_with_tomatoe.png" id="13_cdmo7"]
[ext_resource type="AudioStream" uid="uid://i28el6pgvpo0" path="res://Sprites/audio/Tomaths_start.mp3" id="14_mtvcy"]
[ext_resource type="AudioStream" uid="uid://hjl2qopk1073" path="res://Sprites/audio/splash.mp3" id="15_wtfyw"]

[sub_resource type="Animation" id="Animation_yoqor"]
resource_name = "coulis"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_h6kqc"), ExtResource("1_h6kqc"), ExtResource("2_p68oe"), ExtResource("3_dlqqs"), ExtResource("4_u0tbi"), ExtResource("5_3rhg6"), ExtResource("6_54g56"), ExtResource("7_jehfr"), ExtResource("8_lkje1"), ExtResource("9_dki35"), ExtResource("9_dki35")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1.3, 1.3), Vector2(1.37, 1.37), Vector2(1.28, 1.28), Vector2(1.5, 1.5), Vector2(3.1, 3.1), Vector2(3.8, 3.8), Vector2(3.8, 3.8), Vector2(3.2, 3.3), Vector2(3, 3), Vector2(3, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(70, 0), Vector2(33, 47), Vector2(49, 80), Vector2(7, 82), Vector2(17, 70), Vector2(23, 80), Vector2(10, 85), Vector2(33, 90), Vector2(33, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ma37h"]
_data = {
"coulis": SubResource("Animation_yoqor")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hmkjy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aq0fi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4vgvn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2q3o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5rpe4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_635y4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aime8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_40cqt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2gmj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahgp8"]

[node name="PagePrincipale" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qennl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.843137, 0.556863, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(505, 37)
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_h6kqc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_ma37h")
}

[node name="ExitBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.764
anchor_right = 0.5
anchor_bottom = 0.764
offset_left = -115.0
offset_top = 45.9279
offset_right = 159.0
offset_bottom = 163.928
theme_override_styles/normal = SubResource("StyleBoxEmpty_hmkjy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_aq0fi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4vgvn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n2q3o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5rpe4")
icon = ExtResource("11_cjvmp")
expand_icon = true

[node name="StartBtn" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.165
anchor_top = 0.941
anchor_right = 0.165
anchor_bottom = 0.941
offset_left = 270.92
offset_top = -175.768
offset_right = 529.92
offset_bottom = -33.768
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_635y4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_aime8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_40cqt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_y2gmj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ahgp8")
icon = ExtResource("12_lijjt")
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = -121.0
offset_right = 1142.0
offset_bottom = 735.0
mouse_filter = 2
texture = ExtResource("13_cdmo7")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_mtvcy")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_wtfyw")

[connection signal="button_down" from="ExitBtn" to="." method="_on_exit_btn_button_down"]
[connection signal="button_down" from="StartBtn" to="." method="_on_start_btn_button_down"]
